Datahub/datahub-helm/charts/datahub/static/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-amundsen
spec:
  tls:
    - hosts:
        - datahub-test.lab.sspcloud.fr
  rules:
    - host: datahub-test.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datahub-datahub-frontend
                port: 
                  number: 9002
